# ai-investment-agent

.github/workflows/: ci.yml
adr/: adr-0-high-level-architecture-1.md  adr-1-Language and Framework Choice - Python and FastAPI.md  adr-1.1-Async and Logging.md  adr-2-rag-design-choice.md  adr-2.1-rag-design-choice.md  adr-3-scalability-implications.md
backend/: README.md  docker-compose.yml  locustfile.py  main.py  otel-collector-config.yaml  prometheus.yml  pyproject.toml
backend/app/: models.py
backend/app/core/: auth.py  error_handlers.py  settings.py  telemetry.py
backend/app/core/middleware/: logging.py
backend/app/routes/: ai.py  core.py  documents.py
backend/app/services/: ai_service.py  chunking.py  embeddings.py  memory.py  rag_pipeline.py  storage.py  vectordb.py
backend/grafana-provisioning/dashboards/: ai-investment-agent-dashboard.json  dashboard.yaml
backend/reports/: Locust_2025-10-22-23h07_locustfile.py_http___127.0.0.1_8000.html  Locust_2025-10-22-23h10_locustfile.py_http___127.0.0.1_8000.html
backend/tests/: test_endpoints.py
diagrams/: system_diagram_v1.md  user-query-component-diagram.md
frontend/: README.md
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: BackendStatus.tsx  InsightCard.tsx  LLMQuery.tsx  sentiment.ts
frontend/app/insights/: page.tsx
journals/: month1_journal.md
plans/: month1_plan.md  month1_week1_day1.md  month1_week1_day2.md  month1_week1_day3.md  month1_week1_day4.md  month1_week1_day5.md  month1_week1_day6.md  month1_week1_day7.md  month1_week2_day1.md  month1_week2_day2.md  month1_week2_day3.md  month1_week2_day4.md  month1_week2_day5.md  month1_week2_day6.md  month1_week2_day7.md  month1_week3_day1.md  month1_week3_day2.md  month1_week3_day3.md  month1_week3_day4.md  month1_week3_day5.md  month1_week3_day6.md  month1_week3_day7.md  month1_week4_day1.md  month1_week4_day2.md  month1_week4_day3.md  month1_week4_day4.md  month1_week4_day5.md  month1_week4_day6.md  month1_week4_day7.md  roadmap_30_months.md  weekly_cadence.md
user-flows/: user-query.md
